entry-05/style-05.css
:root { 
    --font-size: 16px;
    --spacing: 10px; 
    --purple: #CE96C9; 
    --off-white: #E4E5DB; 
    --red: #F90C01;
    --orange: #FD4401;
    --lime: #C6DD09; 
    
}

@media (min-width: 390px) {
:root { 
    --font-size: 20px;
    --spacing: 15px; 
    } 
}


/* FONTS */

@font-face {
    font-family: "Karrik-Regular";
    src: url(../fonts/Karrik-Regular.otf) format('opentype');
        
}

@font-face {
    font-family: "Avara-Italic";
    src: url(../fonts/Avara-BoldItalic.otf) format('opentype');
        
}



/* STRUCTURE + CONTENT */


body { background-color: var(--off-white); }

section { padding: var(--spacing);} 

section:nth-child(3) { background-color: var(--purple); }
section:nth-child(4){ background-color: var(--lime); }
section:nth-child(5) { background-color: var(--purple); }
section:nth-child(6) { background-color: var(--orange); }


/* aside, section, nav, footer, header */





/* TREATMENTS */

h1 { 
    font-size: calc(var(--font-size) * 1.5);
    font-family: 'Avara-Italic';
    text-align: center;
    padding: var(--spacing);
 }

